--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   ext_storage: ^1.0.3
   permission_handler: ^5.0.1
   http: ^0.12.1
+  geolocator: ^5.1.3
+  sweet_alert_dialogs: "^0.2.0"
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -50,6 +54,9 @@ flutter:
   assets:
    - assets/images/
    - assets/images/login.png
+   - assets/images/logo.png
+   - assets/images/clock_blue.png
+
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
