--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   http: ^0.12.1
   geolocator: ^5.1.3
   sweet_alert_dialogs: "^0.2.0"
+  progress_dialog: ^1.2.4
+  shared_preferences: ^0.5.7+3
+  sqflite: ^1.3.0
 
 
 dev_dependencies:
