--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,11 @@ dependencies:
   geolocator: ^5.1.3
   sweet_alert_dialogs: "^0.2.0"
   progress_dialog: ^1.2.4
-  shared_preferences: ^0.5.7+3
   sqflite: ^1.3.0
+  flutter_svg: ^0.13.0
+  path_provider: ^1.6.9
+  shared_preferences: ^0.5.7+3
+
 
 
 dev_dependencies:
@@ -59,6 +62,9 @@ flutter:
    - assets/images/login.png
    - assets/images/logo.png
    - assets/images/clock_blue.png
+   - assets/images/logout.svg
+   - assets/images/shield.svg
+   - assets/images/tick.svg
 
   #  - images/a_dot_ham.jpeg
 
