--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.timecarditg">
+
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -14,6 +16,13 @@
         android:label="timecarditg"
         android:icon="@mipmap/ic_launcher"
        >
+
+
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+
+
+
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
