--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   sqflite: ^1.3.0
   flutter_svg: ^0.13.0
   path_provider: ^1.6.9
-  shared_preferences: ^0.5.7+3
-
+  shared_preferences: ^0.5.8
+  image_picker: ^0.6.7+4
+  intl: ^0.16.1
 
 
 dev_dependencies:
