--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -41,6 +41,12 @@ dependencies:
   intl: ^0.16.1
 
 
+
+
+
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,12 +66,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/
-   - assets/images/login.png
-   - assets/images/logo.png
-   - assets/images/clock_blue.png
-   - assets/images/logout.svg
-   - assets/images/shield.svg
-   - assets/images/tick.svg
+   - assets/images/icon.png
+
 
   #  - images/a_dot_ham.jpeg
 
