--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,12 +13,12 @@ if (flutterRoot == null) {
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
-    flutterVersionCode = '1'
+    flutterVersionCode = '12'
 }
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
-    flutterVersionName = '1.0'
+    flutterVersionName = '3.0'
 }
 
 apply plugin: 'com.android.application'
@@ -38,13 +38,27 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.timecarditg"
+        applicationId "com.itgsolutions.gpsAttendanceSystem"
         minSdkVersion 18
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "arm64-v8a", "armeabi", "armeabi-v7a", "universal", "x86_64", "x86"
+        }
     }
+
+//    android {
+//               splits {
+//                   abi {
+//                       enable true
+//                       reset()
+//                       include "arm64-v8a", "armeabi", "armeabi-v7a", "universal", "x86_64", "x86"
+//                       universalApk true
+//                   }
+//               }
+//    }
 
     buildTypes {
         release {
