--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -15,13 +15,29 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(FLUTTER_BUILD_NAME)</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Allow Access Media</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Allow Calender Access</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Allow Contact Access</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This application requires location services to work</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This application requires location services to work</string>
+	<key>NSMotionUsageDescription</key>
+	<string>Allow Access motion</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow Access Photos</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Allow Access Speech Recognition</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,11 +57,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSLocationWhenInUseUsageDescription</key>
-<string>This application requires location services to work</string>
-
-<key>NSLocationAlwaysUsageDescription</key>
-<string>This application requires location services to work</string>
-
 </dict>
 </plist>
