--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   ext_storage: ^1.0.3
   permission_handler: ^5.0.1
   http: ^0.12.1
-  geolocator: ^5.1.3
+  geolocator:
 #  sweet_alert_dialogs: "^0.2.0"
   progress_dialog: ^1.2.4
   sqflite: ^1.3.0
