--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   ext_storage: ^1.0.3
   permission_handler: ^5.0.1
   http: ^0.12.1
-  geolocator:
+  geolocator: ^6.1.8
 #  sweet_alert_dialogs: "^0.2.0"
   progress_dialog: ^1.2.4
   sqflite: ^1.3.0
@@ -42,7 +42,8 @@ dependencies:
   device_preview: any
   smart_select: any
   google_fonts: any
-  imei_plugin: ^1.2.0
+  unique_identifier: ^0.0.3
+  device_info: ^1.0.0
   cached_network_image: any
 
 
