--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   permission_handler: ^5.0.1
   http: ^0.12.1
   geolocator: ^6.1.8
-#  sweet_alert_dialogs: "^0.2.0"
+  pull_to_refresh: ^1.6.3
+  #  sweet_alert_dialogs: "^0.2.0"
   progress_dialog: ^1.2.4
   sqflite: ^1.3.0
   flutter_svg: ^0.13.0
